--- a/precision-recall/assets/styles/global.css
+++ b/precision-recall/assets/styles/global.css
@@ -111,6 +111,12 @@ body {
   font-family: "Amazon Ember Display Heavy";
 }
 
+h1,
+h2,
+h3 {
+  font-family: "Amazon Ember Display Heavy";
+}
+
 /* mobile */
 @media screen and (max-width: 950px) {
   .body-text {
