--- a/roc-auc/assets/styles/global.css
+++ b/roc-auc/assets/styles/global.css
@@ -47,6 +47,11 @@ body {
   background-color: #d4dada;
 }
 
+section {
+  max-width: 1400px;
+  margin: auto;
+}
+
 /* Global Reusable Styles For Convenience */
 .body-text {
   max-width: 45rem;
