--- a/nn2/assets/styles/global.css
+++ b/nn2/assets/styles/global.css
@@ -36,7 +36,10 @@
   --stone: #d4dada;
   --paper: #f1f3f3;
   --white: #ffffff;
-  --bananayellow: #ffe135;
+  --bananayellow: rgb(255, 223, 80);
+  --yellow: yellow;
+  --offpink: rgb(255, 164, 209);
+  --enjoi: darkorange;
 
   /* Z-Index */
   --z-bottom: -100;
@@ -53,7 +56,10 @@
   --secondary: var(--darksquidink);
 
   --max-width: 800px;
-  --size-default: 17px;
+  --size-default: 16px;
+
+  --viz-height: 80vh;
+  --max-viz-height: 600px;
 }
 
 body {
@@ -61,7 +67,7 @@ body {
   font-family: var(--font-main);
   overflow-x: hidden;
   background-size: 20px 20px;
-  background-color: var(--paper);
+  background-color: var(--bg);
   /* background: conic-gradient(
       from 90deg at 1px 1px,
       #0000 90deg,
